<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="61dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center"
            android:text="@string/name"
            android:textSize="40dp" />

        <EditText
            android:id="@+id/question_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center"
            android:hint="@string/question_count"
            android:textColor="@color/purple_200"
            android:textSize="30dp"
            android:inputType="number"/>

        <EditText
            android:id="@+id/calculate_range"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center"
            android:hint="@string/number_range"
            android:textColor="@color/purple_200"
            android:textSize="30dp"
            android:inputType="number"/>

        <EditText
            android:id="@+id/test_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center"
            android:hint="@string/test_time"
            android:textColor="@color/purple_200"
            android:textSize="30dp"
            android:inputType="number"/>

        <Button
            android:id="@+id/begin_test"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center"
            android:text="@string/begintest"
            android:textColor="#F4F0F0"
            android:textSize="30dp"
            android:onClick="begintest"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>